--- a/LadoTsivtsivadze_38/Presentation/Scenes/Main/Base.lproj/Main.storyboard
+++ b/LadoTsivtsivadze_38/Presentation/Scenes/Main/Base.lproj/Main.storyboard
@@ -16,12 +16,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="OPo-Hm-JkM">
-                                <rect key="frame" x="20" y="64" width="374" height="216"/>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="OPo-Hm-JkM">
+                                <rect key="frame" x="0.0" y="64" width="414" height="216"/>
                             </datePicker>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RV3-aN-yQf">
-                                <rect key="frame" x="20" y="330" width="374" height="45"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                                <rect key="frame" x="20" y="330" width="374" height="42"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <state key="normal" title="Calculate Prime Numbers"/>
                                 <connections>
                                     <action selector="onCalculate:" destination="BYZ-38-t0r" eventType="touchUpInside" id="y7E-Ha-xi3"/>
@@ -34,12 +34,13 @@
                             <constraint firstItem="RV3-aN-yQf" firstAttribute="top" secondItem="OPo-Hm-JkM" secondAttribute="bottom" constant="50" id="CTF-3l-pjK"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="RV3-aN-yQf" secondAttribute="trailing" constant="20" id="MZS-HM-aWe"/>
                             <constraint firstItem="OPo-Hm-JkM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="h65-gw-Zfh"/>
-                            <constraint firstItem="OPo-Hm-JkM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="uAz-U5-ctg"/>
+                            <constraint firstItem="OPo-Hm-JkM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="uAz-U5-ctg"/>
                             <constraint firstItem="RV3-aN-yQf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="urg-fy-vIj"/>
-                            <constraint firstItem="OPo-Hm-JkM" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" constant="-20" id="x24-l4-Oe5"/>
+                            <constraint firstItem="OPo-Hm-JkM" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="x24-l4-Oe5"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="btn" destination="RV3-aN-yQf" id="8Ff-eo-9Bv"/>
                         <outlet property="datePicker" destination="OPo-Hm-JkM" id="hmu-qZ-qsu"/>
                     </connections>
                 </viewController>
